@@ -109,6 +109,9 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Node: zOrder property is readwrite
 	LabelBMFont: can be "init" without further arguments
 	
+* Vit Valentin:
+	Author of cocos2d-x's Catmull Rom actions. 
+	
 * zergyo:
 	Grid: Fixed memory leak when setIsTextureFlipped is used
 
