@@ -61,6 +61,7 @@
 #import "CCActionGrid.h"
 #import "CCActionProgressTimer.h"
 #import "CCActionPageTurn3D.h"
+#import "CCActionCatmullRom.h"
 
 #import "CCAnimation.h"
 #import "CCAnimationCache.h"
